src/test/ui/privacy/private-method-inherited.stderr
error[E0624]: method `f` is private
  --> $DIR/private-method-inherited.rs:13:7
   |
LL |     x.f();
   |       ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0624`.
